Workspace/yaml/ingress/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: sicho-ingress
  name: sicho-ingress
