Workspace/yaml/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx # 인그레스 이름 선언
  namespace: sicho-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /destination$1$2
spec:
  ingressClassName: nginx
  rules:
  - host: sicho-master-01
    http:
      paths:
#      - path: /kibana
 #       pathType: Prefix
  #      backend:
   #       service: 
    #        name: 
     #       port: 
      #        number: 8082
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kibana-svc
            port: 
              number: 8084
      - path: /es
        pathType: Prefix
        backend:
          service: 
            name: elasticsearch
            port: 
              number: 8081
